Packaging is hell

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,3 +3,13 @@ name = imap_filter_client
 
 [options]
 packages = find:
+package_dir =
+    =src/
+
+[options.packages.find]
+where = src
+exclude = test*
+
+[options.entry_points]
+console_scripts =
+    imap_filter_client = imap_filter_client.imap_filter_client:entry_point
